--- a/pegasus/sites.v3/code.org/public/ai/index.haml
+++ b/pegasus/sites.v3/code.org/public/ai/index.haml
@@ -75,8 +75,10 @@ theme: responsive_full_width
 %section#ai-curricula
   .wrapper
     %h2=hoc_s(:ai_curricula_heading)
-    %p=hoc_s(:ai_curricula_desc)
-    = view :ai_carousel_curricula_blocks
+    = view :"ai_landing_page/ai_carousel_curricula_elementary"
+    %hr.light
+    %h2=hoc_s(:ai_curricula_heading)
+    = view :"ai_landing_page/ai_carousel_curricula_middle_high"
     %hr.light
     %h3.heading-lg
       =hoc_s("ai_curriculum_offerings.heading")
@@ -89,7 +91,7 @@ theme: responsive_full_width
   .wrapper
     %h2=hoc_s(:ai_carousel_heading)
     .quotes-wrapper
-      = view :ai_carousel_quotes
+      = view :"ai_landing_page/ai_carousel_quotes"
 
 %section#ai-pl
   .wrapper
