--- a/pegasus/sites.v3/code.org/views/ai_landing_page/ai_carousel_quotes.haml
+++ b/pegasus/sites.v3/code.org/views/ai_landing_page/ai_carousel_quotes.haml
@@ -1,5 +1,5 @@
 .carousel-wrapper
-  %swiper-container.swiper-02{navigation: false, init: "false"}
+  %swiper-container.swiper-quotes{navigation: false, init: "false"}
     %swiper-slide.slide.with-image
       %img{src: "/images/ai/ai-quote-betia.png", alt: ""}
       .text-wrapper
