update ux design

--- a/dashboard/app/assets/stylesheets/lti/login_lti_account_linking.scss
+++ b/dashboard/app/assets/stylesheets/lti/login_lti_account_linking.scss
@@ -25,9 +25,13 @@
   color: $white;
 }
 
+.call-to-action-container {
+  display: flex;
+  justify-content: space-between;
+}
+
 .go-back-link {
   display: block;
-  margin-top: 60px;
 }
 
 .oauth-sign-in {
