--- a/pegasus/sites.v3/code.org/views/ai_landing_page/ai_carousel_curricula_middle_high.haml
+++ b/pegasus/sites.v3/code.org/views/ai_landing_page/ai_carousel_curricula_middle_high.haml
@@ -85,14 +85,14 @@
   # TODO - Remove this DCDO logic once the 2024 curriculum is live and add this to the top of the main list
   if !!DCDO.get('curriculum-launch-2024', false)
     block_items.unshift(
-      overline: hoc_s("ai_curriculum_tile.humanities.overline"),
-      title: hoc_s("ai_curriculum_tile.humanities.title"),
+      overline: hoc_s("ai_page.curricula.tile.humanities.overline"),
+      title: hoc_s("ai_page.curricula.tile.humanities.title"),
       img: "/images/action-blocks/action-block-ai-humanities.png",
-      desc: hoc_s("ai_curriculum_tile.humanities.desc"),
-      duration: hoc_s("ai_curriculum_tile.humanities.duration"),
+      desc: hoc_s("ai_page.curricula.tile.humanities.desc"),
+      duration: hoc_s("ai_page.curricula.tile.humanities.duration"),
       url: CDO.studio_url("/s/gen-ai-humanities"),
-      aria_label: hoc_s("ai_curriculum_tile.humanities.aria_label"),
-      button_label: hoc_s("ai_curriculum_tile.humanities.button"),
+      aria_label: hoc_s("ai_page.curricula.tile.humanities.aria_label"),
+      button_label: hoc_s("ai_page.curricula.tile.humanities.button"),
       new: true,
     )
   end
