--- a/pegasus/sites.v3/code.org/public/ai/index.haml
+++ b/pegasus/sites.v3/code.org/public/ai/index.haml
@@ -89,6 +89,9 @@ theme: responsive_full_width
 %section#ai-pl
   .wrapper
     %h2=hoc_s(:ai_pl_heading)
+    -# TODO - Remove this DCDO logic once the 2024 curriculum is live
+    - if !!DCDO.get('curriculum-launch-2024', false)
+      %p=hoc_s("ai_page.pl.desc")
     .action-block__wrapper.action-block__wrapper--three-col
       .action-block.action-block--one-col.flex-space-between
         .content-wrapper
@@ -133,23 +136,17 @@ theme: responsive_full_width
           %a.link-button{href: CDO.studio_url("/courses/self-paced-pl-aiml")}
             =hoc_s(:call_to_action_start_module)
 
-= view :section_divider_line
-
-%section#ai-integrations
+%section#ai-integrations.bg-neutral-light
   .wrapper
     %h2=hoc_s("ai_integrations.heading")
     %p=hoc_s("ai_integrations.desc")
     = view :ai_integrations
 
-%section#ai-videos.bg-neutral-light
+%section#ai-videos
   .wrapper
     %h2=hoc_s(:ai_video_series_title)
     %p=hoc_s(:ai_video_series_desc, markdown: :inline, locals: {how_ai_works_url: "/ai/how-ai-works"})
     = view :carousel_how_ai_works_video
-
-%section
-  .wrapper
-    = view :subscribe_form, subscribe_form_section_title: hoc_s("ai_ta_page.form.heading"), subscribe_form_section_desc: hoc_s("ai_ta_page.form.desc"), form_height: "375px", form_src: "https://go.pardot.com/l/153401/2024-03-27/pqwtxx"
 
 %section.bg-neutral-light
   .wrapper.flex-container.justify-space-between.align-items-center.wrap
@@ -165,6 +162,10 @@ theme: responsive_full_width
       %a.link-button.has-external-link{href: "https://teachai.org/policy", target: "_blank", rel: "noopener noreferrer"}
         =hoc_s(:ai_explore_the_resources)
   .clear
+
+%section.no-padding-bottom
+  .wrapper
+    = view :subscribe_form, subscribe_form_section_title: hoc_s("ai_ta_page.form.heading"), subscribe_form_section_desc: hoc_s("ai_ta_page.form.desc"), form_height: "375px", form_src: "https://go.pardot.com/l/153401/2024-03-27/pqwtxx"
 
 %section
   .wrapper.centered
