--- a/pegasus/sites.v3/code.org/views/ai_landing_page/ai_carousel_curricula_middle_high.haml
+++ b/pegasus/sites.v3/code.org/views/ai_landing_page/ai_carousel_curricula_middle_high.haml
@@ -98,7 +98,7 @@
   end
 
 .carousel-wrapper
-  %swiper-container.swiper-middle-high{navigation: "true", "navigation-next-el": ".nav-next-01", "navigation-prev-el": ".nav-prev-01", pagination: "true", init: "false"}
+  %swiper-container.swiper-middle-high{navigation: "true", "navigation-next-el": ".nav-next-middle-high", "navigation-prev-el": ".nav-prev-middle-high", pagination: "true", init: "false"}
     - block_items.each do |block_item|
       %swiper-slide
         .action-block.action-block--one-col.flex-space-between
@@ -127,5 +127,5 @@
             %a.link-button{href: block_item[:url], aria:{label: block_item[:aria_label]}}
               = block_item[:button_label]
 
-  %button.swiper-nav-prev.nav-prev-01
-  %button.swiper-nav-next.nav-next-01
+  %button.swiper-nav-prev.nav-prev-middle-high
+  %button.swiper-nav-next.nav-next-middle-high
