update computer vision tile

--- a/pegasus/sites.v3/code.org/views/ai_landing_page/ai_carousel_curricula_middle_high.haml
+++ b/pegasus/sites.v3/code.org/views/ai_landing_page/ai_carousel_curricula_middle_high.haml
@@ -21,14 +21,14 @@
       button_label: hoc_s(:call_to_action_view_lesson_plan),
     },
     {
-      overline: hoc_s(:module_grade_9_12),
-      title: hoc_s(:curriculum_name_csa_ai),
+      overline: hoc_s("ai_page.curricula.tile.computer_vision.overline"),
+      title: hoc_s("ai_page.curricula.tile.computer_vision.title"),
       img: "/images/ai/ai-curriculum-computer-vision.png",
-      desc: hoc_s(:curriculum_desc_csa_ai_short),
-      duration: hoc_s(:module_duration_5_hrs_plus),
+      desc: hoc_s("ai_page.curricula.tile.computer_vision.desc"),
+      duration: hoc_s("ai_page.curricula.tile.computer_vision.duration"),
       url: "/curriculum/computer-vision",
-      aria_label: hoc_s(:ai_curriculum_btn_aria_label_05),
-      button_label: hoc_s(:call_to_action_explore_module),
+      aria_label: hoc_s("ai_page.curricula.tile.computer_vision.aria_label"),
+      button_label: hoc_s("ai_page.curricula.tile.computer_vision.button"),
     },
     {
       overline: hoc_s(:module_grade_6_12),
