remove interpolation on carousel images

--- a/pegasus/sites.v3/code.org/views/ai_landing_page/ai_carousel_curricula_elementary.haml
+++ b/pegasus/sites.v3/code.org/views/ai_landing_page/ai_carousel_curricula_elementary.haml
@@ -55,7 +55,7 @@
             = block_item[:overline]
         %h3
           = block_item[:title]
-        %img{src: "#{block_item[:img]}", alt: ""}
+        %img{src: block_item[:img], alt: ""}
         %p
           = block_item[:desc]
         %p
