prevent new account from being created during linking flow

--- a/dashboard/app/assets/stylesheets/lti/login_lti_account_linking.scss
+++ b/dashboard/app/assets/stylesheets/lti/login_lti_account_linking.scss
@@ -25,6 +25,13 @@
   color: $white;
 }
 
+#flash-messages {
+  text-align: center;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .call-to-action-container {
   display: flex;
   justify-content: space-between;
