create additional resources view

--- a/pegasus/sites.v3/code.org/public/curriculum/elementary-school.haml
+++ b/pegasus/sites.v3/code.org/public/curriculum/elementary-school.haml
@@ -14,6 +14,7 @@ theme: responsive_full_width
       =hoc_s(:curricula_title_elementary)
     %p.video-101__text=hoc_s(:curricula_desc_elementary)
     = view :elementary_school_curricula_video
+    = view :curriculum_pages_additional_resources, is_elementary_page: true
     %hr
     %div.centered
       %p
