show correct workshops content

--- a/pegasus/sites.v3/code.org/views/curriculum_pages_additional_resources.haml
+++ b/pegasus/sites.v3/code.org/views/curriculum_pages_additional_resources.haml
@@ -15,11 +15,11 @@
       button_label: hoc_s('curricula_pages.additional_resources.self_paced.button')
     },
     {
-      title: hoc_s(:teach_page_additional_materials_list_heading_02),
+      title: hoc_s('curricula_pages.additional_resources.workshops.' + (is_elementary_page ? 'title_K_5' : 'title_6_12')),
       image: "/images/course-catalog-illustration.png",
-      desc: hoc_s(:admins_page_resources_desc_videos),
+      desc: hoc_s('curricula_pages.additional_resources.workshops.desc'),
       url: is_elementary_page ? "/professional-learning/elementary" : "/professional-learning/middle-high",
-      button_label: hoc_s('curricula_pages.additional_resources.self_paced.button')
+      button_label: hoc_s('curricula_pages.additional_resources.workshops.button'),
     },
   ]
 
