--- a/pegasus/sites.v3/code.org/views/curriculum_pages_additional_resources.haml
+++ b/pegasus/sites.v3/code.org/views/curriculum_pages_additional_resources.haml
@@ -15,7 +15,7 @@
       button_label: hoc_s('curricula_pages.additional_resources.self_paced.button')
     },
     {
-      title: hoc_s('curricula_pages.additional_resources.workshops.' + (is_elementary_page ? 'title_K_5' : 'title_6_12')),
+      title: hoc_s('curricula_pages.additional_resources.workshops.' + (is_elementary_page ? 'title_k_5' : 'title_6_12')),
       image: "/images/course-catalog-illustration.png",
       desc: hoc_s('curricula_pages.additional_resources.workshops.desc'),
       url: is_elementary_page ? "/professional-learning/elementary" : "/professional-learning/middle-high",
