--- a/pegasus/sites.v3/code.org/views/self_paced_pl/self_paced_pl_modules_carousel_elementary.haml
+++ b/pegasus/sites.v3/code.org/views/self_paced_pl/self_paced_pl_modules_carousel_elementary.haml
@@ -17,7 +17,7 @@
       title: hoc_s(:module_label_teaching_csf),
       image: "/images/self-paced-pl-tile-csf.png",
       curriculum: hoc_s(:curriculum_name_csf_02),
-      duration: hoc_s(:module_duration_4_5_hrs),
+      duration: hoc_s(:module_duration_4_hrs_30_mins),
       prerequisites: hoc_s(:module_prerequisites_none),
       url_primary: CDO.studio_url("/s/k5-onlinepd-2023"),
       url_secondary: "/csf",
