--- a/dashboard/app/views/devise/registrations/edit.html.haml
+++ b/dashboard/app/views/devise/registrations/edit.html.haml
@@ -75,6 +75,12 @@
       .field
         = f.label :gender_student_input, t('signup_form.gender'), class: "label-bold"
         = f.text_field :gender_student_input, maxlength: 50
+    .field
+      - location = Geocoder.search(request.ip).try(:first)
+      - country_code = location&.country_code.to_s.upcase
+      = f.label :us_state, t('activerecord.attributes.user.us_state'), class: 'label-bold'
+      = f.select :us_state, us_state_options, {include_blank: t('school_info.select_state')}, required: true
+      = f.hidden_field :country_code, value: country_code
   - if resource.teacher?
     .field
       = f.label :school, class: "label-bold"
@@ -131,7 +137,7 @@
     = f.hidden_field :lti_roster_sync_enabled
 
 -# The CPA checks for whether or not the account is a personal login... so we check everything except that
-- locked = experiment_value('cpa-partial-lockout', request) && Policies::ChildAccount.user_predates_policy?(current_user, assume_permission_required: true)
+- locked = experiment_value('cpa-partial-lockout', request) && Policies::ChildAccount.underage?(current_user) && !Policies::ChildAccount::ComplianceState.permission_granted?(current_user)
 - if locked
   %div#lockout-linked-accounts{
     data: {
@@ -167,11 +173,16 @@
   %hr
   %h2= t('user.create_personal_login')
 
-  - if locked
-    %p
-      = t('user.create_personal_login_parental_permission_required')
-  - else
-    %p
+  -# We need to also account for the case when the US State is not specified
+  - locked = locked || current_user.country_code.nil? || current_user.us_state.nil?
+
+  %p#edit_user_create_personal_account_description
+    - if locked
+      - if current_user.us_state.nil?
+        = t('user.create_personal_login_state_required')
+      - else
+        = t('user.create_personal_login_parental_permission_required')
+    - else
       = no_email ? t('user.create_personal_login_under_13_info') : t('user.create_personal_login_info')
       = t('user.create_personal_login_link_account') if current_user.migrated?
   .div{style: 'position: relative'}
