--- a/apps/src/templates/sectionProgressV2/expand-all-rows-dropdown.module.scss
+++ b/apps/src/templates/sectionProgressV2/expand-all-rows-dropdown.module.scss
@@ -17,6 +17,7 @@
   overflow-y: auto;
   border-radius: 4px !important;
   border: 1px solid $light_gray_400 !important;
+  box-shadow: 0 6px 12px rgba(0 0 0 / 0.175) !important;
 }
 
 .menuItem {
