add resources and game link

--- a/pegasus/sites.v3/code.org/views/curriculum_pages_additional_resources.haml
+++ b/pegasus/sites.v3/code.org/views/curriculum_pages_additional_resources.haml
@@ -23,6 +23,10 @@
     },
   ]
 
+%h2.centered
+  =hoc_s('curricula_pages.additional_resources.title')
+%p.centered
+  =hoc_s('curricula_pages.additional_resources.desc')
 .action-block__wrapper.action-block__wrapper--three-col
   - additional_resources.each do |resource_item|
     .action-block.action-block--one-col.flex-space-between
