add hero banner styles

--- a/pegasus/sites.v3/code.org/public/css/design-system-pegasus.scss
+++ b/pegasus/sites.v3/code.org/public/css/design-system-pegasus.scss
@@ -271,6 +271,10 @@ hr {
   & > .grid-container {
     @media (min-width: $width-sm) {
       grid-template-columns: repeat(2, 1fr);
+
+      &.wider-text {
+        grid-template-columns: 1.5fr 1fr;
+      }
     }
   }
 
