add multiple choice options

--- a/apps/src/lab2/levelEditors/predictSettings/edit-predict-settings.module.scss
+++ b/apps/src/lab2/levelEditors/predictSettings/edit-predict-settings.module.scss
@@ -9,3 +9,10 @@
   line-height: 1.64;
   margin-bottom: .37rem;
 }
+
+.multipleChoiceOption {
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+  margin: 5px 0;
+}
