update icons sizing

--- a/apps/src/componentLibrary/tabs/tabs.module.scss
+++ b/apps/src/componentLibrary/tabs/tabs.module.scss
@@ -116,6 +116,7 @@
       font-size: 1.1875rem;
       line-height: 125%;
       width: 1.5rem;
+      height: 1.5rem;
     }
 
     ul {
@@ -296,11 +297,11 @@
 
 .tabs-xs {
   &.tabs-primary {
-    // TODO once final numbers agreed - update
     i {
       font-size: 0.75rem;
       line-height: 125%;
-      width: 0.9375rem;
+      width: 1rem;
+      height: 1rem;
     }
 
     ul {
