--- a/pegasus/sites.v3/code.org/public/curriculum/game-design.haml
+++ b/pegasus/sites.v3/code.org/public/curriculum/game-design.haml
@@ -13,7 +13,7 @@ theme: responsive_full_width
         =hoc_s("game_design_page.heading")
       %p.body-two.white
         =hoc_s("game_design_page.desc")
-      %a.link-button.white{href: "#"}
+      %a.link-button.white{href: "#curricula"}
         =hoc_s("game_design_page.button.explore_curriculum")
     %figure
       %img{src: "/images/game-design/game-design-banner-graphic.png", alt: "", style: "width: 100%"}
@@ -22,9 +22,49 @@ theme: responsive_full_width
   .wrapper.centered
     %h2=hoc_s("game_design_page.why.heading")
     %p=hoc_s("game_design_page.why.desc")
-    = view :"game_design/why_list"
+    = view :"game_design/game_design_why_list"
     .button-wrapper.centered
-      %a.link-button{href: "#"}
+      %a.link-button{href: "#curricula"}
         =hoc_s("game_design_page.button.explore_curriculum")
       %a.link-button.secondary{href: "#"}
         =hoc_s("game_design_page.button.see_pl")
+
+%section.bg-primary-light
+  .wrapper
+    .flex-container.align-items-center.gap-2
+      .text-wrapper.flex-1
+        %h2.heading-sm
+          =hoc_s("game_design_page.resources.heading")
+        %p=hoc_s("game_design_page.resources.desc", markdown: :inline)
+      %a.link-button{href: CDO.studio_url("/users/sign_up")}
+        =hoc_s("game_design_page.resources.button")
+
+%section#curricula
+  .wrapper
+    %h2=hoc_s("game_design_page.elementary_curricula.heading")
+    = view :"game_design/game_design_curriculum_elementary"
+    %hr.light
+    %h2=hoc_s("game_design_page.mid_high_curricula.heading")
+    = view :"game_design/game_design_curriculum_mid_high"
+
+%section.quote.bg-neutral-dark
+  .wrapper
+    %div.quotes-wrapper
+      %p.quote-text.large
+        =hoc_s("game_design_page.quote.text")
+      %p.no-margin-bottom
+        =hoc_s("game_design_page.quote.byline")
+        %span •
+        Nevada
+
+%section.bg-neutral-light
+  .wrapper
+    %h2=hoc_s("game_design_page.teach.heading")
+    %p=hoc_s("game_design_page.teach.desc")
+    = view :"game_design/game_design_teach"
+
+%section
+  .wrapper.centered
+    %h2=hoc_s("game_design_page.additional_resources.heading")
+    %p=hoc_s("game_design_page.additional_resources.desc")
+    = view :"game_design/game_design_additional_resources"
