Curriculum Launch 2024 - Update code.org/ai page (#59277)
* clean up todos and remove dance ai skinny banner

* update curriculum section

* add curricula headings and update string namespace

* update section order and bg colors

* add pl carousel

* clean up

* update computer vision tile

* remove interpolation on carousel images

* rearrange pl carousel

--- a/pegasus/sites.v3/code.org/views/ai_landing_page/ai_carousel_curricula_middle_high.haml
+++ b/pegasus/sites.v3/code.org/views/ai_landing_page/ai_carousel_curricula_middle_high.haml
@@ -21,14 +21,14 @@
       button_label: hoc_s(:call_to_action_view_lesson_plan),
     },
     {
-      overline: hoc_s(:module_grade_9_12),
-      title: hoc_s(:curriculum_name_csa_ai),
+      overline: hoc_s("ai_page.curricula.tile.computer_vision.overline"),
+      title: hoc_s("ai_page.curricula.tile.computer_vision.title"),
       img: "/images/ai/ai-curriculum-computer-vision.png",
-      desc: hoc_s(:curriculum_desc_csa_ai_short),
-      duration: hoc_s(:module_duration_5_hrs_plus),
+      desc: hoc_s("ai_page.curricula.tile.computer_vision.desc"),
+      duration: hoc_s("ai_page.curricula.tile.computer_vision.duration"),
       url: "/curriculum/computer-vision",
-      aria_label: hoc_s(:ai_curriculum_btn_aria_label_05),
-      button_label: hoc_s(:call_to_action_explore_module),
+      aria_label: hoc_s("ai_page.curricula.tile.computer_vision.aria_label"),
+      button_label: hoc_s("ai_page.curricula.tile.computer_vision.button"),
     },
     {
       overline: hoc_s(:module_grade_6_12),
@@ -82,18 +82,41 @@
     },
   ]
 
+  # TODO - Remove this DCDO logic once the 2024 curriculum is live and add this to the top of the main list
+  if !!DCDO.get('curriculum-launch-2024', false)
+    block_items.unshift(
+      overline: hoc_s("ai_page.curricula.tile.humanities.overline"),
+      title: hoc_s("ai_page.curricula.tile.humanities.title"),
+      img: "/images/action-blocks/action-block-ai-humanities.png",
+      desc: hoc_s("ai_page.curricula.tile.humanities.desc"),
+      duration: hoc_s("ai_page.curricula.tile.humanities.duration"),
+      url: CDO.studio_url("/s/gen-ai-humanities"),
+      aria_label: hoc_s("ai_page.curricula.tile.humanities.aria_label"),
+      button_label: hoc_s("ai_page.curricula.tile.humanities.button"),
+      new: true,
+    )
+  end
+
 .carousel-wrapper
-  %swiper-container.swiper-01{navigation: "true", "navigation-next-el": ".nav-next-01", "navigation-prev-el": ".nav-prev-01", pagination: "true", init: "false"}
+  %swiper-container.swiper-middle-high{navigation: "true", "navigation-next-el": ".nav-next-middle-high", "navigation-prev-el": ".nav-prev-middle-high", pagination: "true", init: "false"}
     - block_items.each do |block_item|
       %swiper-slide
         .action-block.action-block--one-col.flex-space-between
           .content-wrapper
-            %p.overline
-              =hoc_s(:module_label_grades)
-              = block_item[:overline]
+            - if block_item[:new]
+              .flex-container.justify-space-between.align-items-start
+                %p.overline
+                  =hoc_s(:module_label_grades)
+                  = block_item[:overline]
+                %p.new
+                  =hoc_s(:new)
+            - else
+              %p.overline
+                =hoc_s(:module_label_grades)
+                = block_item[:overline]
             %h3
               = block_item[:title]
-            %img{src: "#{block_item[:img]}", alt: ""}
+            %img{src: block_item[:img], alt: ""}
             %p
               = block_item[:desc]
             %p
@@ -104,5 +127,5 @@
             %a.link-button{href: block_item[:url], aria:{label: block_item[:aria_label]}}
               = block_item[:button_label]
 
-  %button.swiper-nav-prev.nav-prev-01
-  %button.swiper-nav-next.nav-next-01
+  %button.swiper-nav-prev.nav-prev-middle-high
+  %button.swiper-nav-next.nav-next-middle-high
