--- a/pegasus/sites.v3/code.org/public/curriculum/high-school.haml
+++ b/pegasus/sites.v3/code.org/public/curriculum/high-school.haml
@@ -12,9 +12,11 @@ theme: responsive_full_width
       =hoc_s(:curricula_title_high)
     %p.video-101__text=hoc_s(:curricula_desc_high)
     = view :high_school_curricula_video
-
-%section.bg-neutral-light
-  .wrapper
-    = view :curriculum_pages_additional_resources, is_elementary_page: false
+    %hr
+    %div.centered
+      %p
+        =hoc_s(:heading_explore_curriculum_catalog)
+      %a.link-button.secondary{href: "https://studio.code.org/catalog"}
+        =hoc_s(:call_to_action_explore_curriculum_catalog)
 
 = view :analytics_event_log_helper, event_name: AnalyticsConstants::HIGH_SCHOOL_CURRICULUM_PAGE_VISITED_EVENT
