remove extra margin on steps-list wrapper

--- a/pegasus/sites.v3/code.org/public/css/design-system-pegasus.scss
+++ b/pegasus/sites.v3/code.org/public/css/design-system-pegasus.scss
@@ -520,7 +520,7 @@ ul.steps-list {
   justify-content: space-between;
   flex-flow: row wrap;
   align-items: baseline;
-  margin: calc(3rem + 6px) auto 3rem;
+  margin: 3rem auto;
   padding: unset;
   gap: 2rem;
 
