add background color for tabs

--- a/apps/src/aichat/views/model-customization-workspace.module.scss
+++ b/apps/src/aichat/views/model-customization-workspace.module.scss
@@ -11,6 +11,10 @@
   display: flex;
   flex-direction: column;
 
+  .tabsContainer {
+    background-color: $light_gray_200;
+  }
+
   textarea {
     @extend %full-width;
     height: 120px;
