--- a/pegasus/sites.v3/code.org/views/curriculum_pages_additional_resources.haml
+++ b/pegasus/sites.v3/code.org/views/curriculum_pages_additional_resources.haml
@@ -29,7 +29,7 @@
   =hoc_s('curricula_pages.additional_resources.desc')
 .action-block__wrapper.action-block__wrapper--three-col
   - additional_resources.each do |resource_item|
-    .action-block.action-block--one-col.flex-space-between
+    .action-block.action-block--one-col.flex-space-between.white
       .content-wrapper
         %h3
           = resource_item[:title]
