--- a/pegasus/sites.v3/code.org/views/elementary_school_curricula_video.haml
+++ b/pegasus/sites.v3/code.org/views/elementary_school_curricula_video.haml
@@ -1,4 +1,4 @@
-- show_game_design_curriculum = DCDO.get('curriculum-launch-2024', false)
+- show_game_design_curriculum = !!DCDO.get('curriculum-launch-2024', false)
 
 - video_curricula_index = 6
 
@@ -9,7 +9,7 @@
 - video_curricula_desc = [hoc_s(:csf_page_top_desc), hoc_s(:csc_page_top_desc), hoc_s(:ai_hero_desc), hoc_s(:curriculum_desc_maker), hoc_s('curricula_pages.game_design.desc'), hoc_s(:hoc_homepage_what_is_hoc_subhead)]
 
 - video_id = ["cs_connections", "ai_intelligence", "courses_maker"]
-- video_link =["/csf", "/csc", "/ai", "/maker", "/curriculum/games", "/hourofcode"]
+- video_link =["/csf", "/csc", "/ai", "/maker", "/curriculum/game-design", "/hourofcode"]
 - video_link_title=[:call_to_action_explore_csf, :call_to_action_explore_csc, :ai_why_link_01, :call_to_action_explore_maker, 'curricula_pages.game_design.button', :call_to_action_explore_hoc]
 - video_code = ["rNIM1fzJ8u0", "GDcKJ1v2W1s", "dWRnCXbUDgA", "sLIJNEIE0Rs"]
 
