add pl skip link

--- a/pegasus/sites.v3/code.org/public/curriculum/game-design.haml
+++ b/pegasus/sites.v3/code.org/public/curriculum/game-design.haml
@@ -26,7 +26,7 @@ theme: responsive_full_width
     .button-wrapper.centered
       %a.link-button{href: "#curricula"}
         =hoc_s("game_design_page.button.explore_curriculum")
-      %a.link-button.secondary{href: "#"}
+      %a.link-button.secondary{href: "#professional-learning"}
         =hoc_s("game_design_page.button.see_pl")
 
 %section.bg-primary-light
@@ -58,7 +58,7 @@ theme: responsive_full_width
         %span •
         Nevada
 
-%section.bg-neutral-light
+%section#professional-learning.bg-neutral-light
   .wrapper
     %h2=hoc_s("game_design_page.teach.heading")
     %p=hoc_s("game_design_page.teach.desc")
