update dcdo flag and url

--- a/pegasus/sites.v3/code.org/views/high_school_curricula_video.haml
+++ b/pegasus/sites.v3/code.org/views/high_school_curricula_video.haml
@@ -1,3 +1,5 @@
+- show_game_design_curriculum = !!DCDO.get('curriculum-launch-2024', false)
+
 - video_curricula_index = 7
 
 - video_curricula_tags = [hoc_s(:module_grade_6_10), hoc_s(:module_grade_9_12), hoc_s(:module_grade_9_12), hoc_s(:module_grade_3_12), hoc_s(:module_grade_3_12), hoc_s(:module_grade_3_12), hoc_s(:module_grade_k_12)]
@@ -7,7 +9,7 @@
 - video_curricula_desc = [hoc_s(:csd_page_top_desc), hoc_s(:csp_page_top_desc), hoc_s(:curriculum_desc_csa),  hoc_s(:ai_hero_desc), hoc_s(:curriculum_desc_maker), hoc_s('curricula_pages.game_design.desc'), hoc_s(:hoc_homepage_what_is_hoc_subhead)]
 
 - video_id = ["cs_discoveries", "cs_principles", "ai_intelligence", "courses_maker", "hour_of_code"]
-- video_link = ["/csd", "/csp", "/csa", "/ai", "/maker", "/curriculum/games", "/hourofcode"]
+- video_link = ["/csd", "/csp", "/csa", "/ai", "/maker", "/curriculum/game-design", "/hourofcode"]
 - video_link_title = [:call_to_action_explore_csd, :call_to_action_explore_csp, :call_to_action_explore_csa, :ai_why_link_01, :call_to_action_explore_maker, 'curricula_pages.game_design.button', :call_to_action_explore_hoc]
 - video_code = ["uQim0hBHco0", "DMr1iFYacGQ", "lFkFi2jGs70", "dWRnCXbUDgA", "sLIJNEIE0Rs"]
 
