--- a/pegasus/sites.v3/code.org/public/css/design-system-pegasus.scss
+++ b/pegasus/sites.v3/code.org/public/css/design-system-pegasus.scss
@@ -173,6 +173,9 @@ i.fa-fw {
   & > .flex-1-5 {
     flex: 1.5;
   }
+  & > .flex-2 {
+    flex: 2;
+  }
 }
 
 // Grid container
@@ -271,6 +274,10 @@ hr {
   & > .grid-container {
     @media (min-width: $width-sm) {
       grid-template-columns: repeat(2, 1fr);
+
+      &.wider-text {
+        grid-template-columns: 1.5fr 1fr;
+      }
     }
   }
 
@@ -504,34 +511,21 @@ ul {
   }
 }
 
-// Ordered lists
-// Step-by-step section
-ol.steps-list {
+// Step-by-step lists
+// These styles can be used with an ordered list as seen on code.org/professional-learning/middle-high
+// or an unordered list that uses icons as seen on code.org/curriculum/game-design.
+ol.steps-list,
+ul.steps-list {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
   align-items: baseline;
-  margin: unset;
+  margin: 3rem auto;
   padding: unset;
+  gap: 2rem;
 
-  &.four-col {
-    li {
-      width: 20%;
-
-      @media screen and (max-width: $width-sm) {
-        width: 100%;
-      }
-    }
-  }
-
-  &.three-col {
-    li {
-      width: 28%;
-
-      @media screen and (max-width: $width-sm) {
-        width: 100%;
-      }
-    }
+  @media (max-width: $width-sm) {
+    flex-direction: column;
   }
 
   li {
@@ -539,18 +533,23 @@ ol.steps-list {
     text-indent: 0 !important;
     display: flex;
     justify-content: center;
+    flex: 1;
     flex-wrap: wrap;
     text-align: center;
-    margin: 3rem 0 2.5rem;
 
     a.link-button,
     button,
     .btn {
       min-width: unset;
     }
+
+    &::before {
+      content: "";
+    }
   }
 
-  h3 {
+  h3,
+  .icon-wrapper {
     width: 100%;
 
     & > span {
@@ -577,16 +576,30 @@ ol.steps-list {
         border: 6px solid var(--brand_primary_light);
         border-radius: 100%;
       }
+
+      &:has(i) {
+        font-size: 1.75rem;
+        line-height: 2;
+      }
+    }
+
+    &:has(i) {
+      margin-bottom: 1rem;
     }
   }
 
-  h4 {
+  h4,
+  &:has(.icon-wrapper) h3 {
     @include heading-sm;
     width: 100%;
   }
 
   p {
     @include body-three;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
 
