--- a/pegasus/sites.v3/code.org/public/curriculum/csf.haml
+++ b/pegasus/sites.v3/code.org/public/curriculum/csf.haml
@@ -30,6 +30,8 @@ theme: responsive_full_width
         %li=hoc_s(:csf_page_intro_list_02)
         %li=hoc_s(:csf_page_intro_list_03)
         %li=hoc_s(:csf_page_intro_list_04)
+        -# The list item below is using the new namespace pattern for strings
+        %li=hoc_s("csf_page.intro_list_05")
       %a.link-button{href: "#pick-a-course"}
         =hoc_s(:call_to_action_explore_courses)
     .clear
@@ -114,5 +116,12 @@ theme: responsive_full_width
 %section#csf-newsletter-signup{style: "padding-top: 2rem"}
   .wrapper
     = view :subscribe_form, subscribe_form_section_title: hoc_s(:subscribe_form_section_title), subscribe_form_section_desc: hoc_s(:subscribe_form_section_desc_csf), form_height: "375px", form_src: "http://go.pardot.com/l/153401/2018-10-02/lzp5jd"
+
+%section.bg-neutral-light
+  .wrapper
+    -# The section is using the new namespace pattern for strings
+    %h2=hoc_s("csf_page.additional_resources.heading")
+    %p=hoc_s("csf_page.additional_resources.desc")
+    = view :csf_additional_resources
 
 = view :analytics_event_log_helper, event_name: AnalyticsConstants::CSF_CURRICULUM_PAGE_VISITED_EVENT
